# sql-populator

./: CMakeLists.txt  main.cpp  relationship-data.txt  user-data.txt
data/: babynames-clean.csv  categories.txt  reasons.txt
include/: article.h  category.h  configs.h  exceptions.h  friendship.h  message.h  mockdata.h  object.h  publisher.h  reports.h  utils.h
src/: mockdata.cpp  publisher.cpp  utils.cpp
